--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.alipay.apollo.optimize'// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.mpaas_artifact = "mpaas-baseline"
+    ext.mpaas_baseline = "10.1.68-28"
     repositories {
         google()
         jcenter()
+        maven {
+            url 'http://mvn.cloud.alipay.com/nexus/content/repositories/releases/'
+            name 'alipay'
+            credentials {
+                username 'mvn_read_ws'
+                password 'mrk8929'
+            }
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.boost.easyconfig:easyconfig:2.4.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +27,14 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'http://mvn.cloud.alipay.com/nexus/content/repositories/releases/'
+            name 'alipay'
+            credentials {
+                username 'mvn_read_ws'
+                password 'mrk8929'
+            }
+        }
     }
 }
 
