--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,13 @@ android {
 
     defaultConfig {
         applicationId "com.databox.mirror"
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -36,6 +37,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.mpaas.android:antui'
+    implementation project(path: ':okgo')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -55,5 +57,11 @@ dependencies {
     implementation files('libs/commons-lang3-3.7.jar')
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    
+    // if u use AndroidX, use the following
+    implementation 'com.blankj:utilcodex:1.30.6'
+    //QMUI
+    implementation 'com.qmuiteam:qmui:2.0.0-alpha10'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
