--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,10 @@ dependencies {
     implementation 'com.blankj:utilcodex:1.30.6'
     //QMUI
     implementation 'com.qmuiteam:qmui:2.0.0-alpha10'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation 'com.android.support:multidex:1.0.3'
+    //log
+    implementation 'com.orhanobut:logger:2.2.0'
+
 }
