--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    // retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    // RxJava 2
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    // retrofit 2
+//    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+//    // RxJava 2
+//    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // 解析JSON
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -66,5 +66,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     //log
     implementation 'com.orhanobut:logger:2.2.0'
+    // bufferknife
+//    implementation 'com.jakewharton:butterknife:6.1.0'
 
+    
 }
